--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
+  "apidoc": {
+    "name": "Node Task API - Documentation",
+    "template": {
+      "forceLanguage": "en"
+    }
+  },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -16,6 +24,7 @@
     "sequelize": "^6.13.0"
   },
   "devDependencies": {
+    "apidoc": "^0.15.1",
     "nodemon": "^2.0.15"
   }
 }
