--- a/config/config_mysql.json
+++ b/config/config_mysql.json
@@ -1,7 +1,7 @@
 {
 	"database": "home_services",
 	"port": 3306,
-	"host": "127.0.0.1",
+	"host": "localhost",
 	"user": "root",
-	"password": ""
+	"password": "18072001"
 }
